fix text overlapping  on tab-land

--- a/src/assets/stylesheets/_mixins.scss
+++ b/src/assets/stylesheets/_mixins.scss
@@ -46,3 +46,14 @@ ORDER: Base + typography > general layout + grid > page layout > components
     align-items: center;
 }
 
+@mixin text-small{
+    font-size: var(--small-size);
+    line-height: var(--small-height);
+    letter-spacing: var(--small-letter-spacing);
+}
+
+@mixin text-h4{
+    font-size: var(--h4-size);
+    line-height: var(--h4-line-height);
+    letter-spacing: var(--h4-small-spacing);
+}
